syntax = "proto3";

package api;

service Platform {
	rpc Register(RegisterRequest) returns (ErrorCode) {}
	rpc Auth(AuthRequest) returns (RegisteredUser) {}
	rpc Unregister(Empty) returns (ErrorCode) {}
	rpc PostContract(PostContractRequest) returns (ErrorCode) {}
	rpc GetContract(GetContractRequest) returns (Contract) {}
	rpc JoinSignature(JoinSignatureRequest) returns (stream UserConnected) {}
	rpc ReadySign(ReadySignRequest) returns (LaunchSignature) {} // Warning, LaunchSignature can be emitted with a very high delay
}

// RegisterRequest message contains the client's email adress and his
// request (ie the PEM-encoded certificate request)
message RegisterRequest {
	string email = 1;
	string request = 2;
}

// ErrorCode message contains an error code and a message
// Above or zero : target-side error
// Less than 0   : local error
message ErrorCode {
	enum Code {
		// SUCCESS is the error code for a successful request
		SUCCESS = 0;
		// INVARG is the error code for an invalid argument
		INVARG = 1;
		// BADAUTH is the error code for a bad authentication
		BADAUTH = 2;
		// WARNING is the error code for a success state containing a specific warning message
		WARNING = 3;
		// INTERR is the error code for an internal server error
		INTERR = -1;
		// TIMEOUT is the error code for a timeout or unreacheable target
		TIMEOUT = -2;
	}
	Code code = 1;
	string message = 2;
}

// AuthRequest message contains the client's email adress and the token used
// for authentication
message AuthRequest {
	string email = 1;
	string token = 2;
}

// RegisteredUser message contains the generated client certificate
// (PEM-encoded)
message RegisteredUser {
	string clientCert = 1;
}

// Empty message is an empty message
message Empty {
}

// PostContractRequest message contains the contract as SHA-512 hash, its filename,
// the list of signers as an array of strings, and a comment
message PostContractRequest {
	bytes hash = 1;
	string filename = 2;
	repeated string signer = 3;
	string comment = 4;
}

// GetContractRequest message contains the uuid of the asked contract
message GetContractRequest {
	string uuid = 1;
}

// Contract is the return value when a contract is fetched from the platform.
// The contract is in json format to avoid duplicating structures.
message Contract {
	ErrorCode errorCode = 1;
	bytes json = 2;
}

// JoinSignatureRequest message contains the contract to join unique identifier
// and the port the client will be listening at
message JoinSignatureRequest {
	string contractUuid = 1;
	uint32 port = 2;
}

// UserConnected is emitted by the platform to the client to announce a new client connection
message UserConnected {
	ErrorCode errorCode = 1;
	string contractUuid = 2;
	User user = 3;
}

message User {
	bytes keyHash = 1;
	string email = 2;
	string ip = 3;
	uint32 port = 4;
}

// ReadySignRequest contains the contract unique identitier that is ready to be signed
message ReadySignRequest {
	string contractUuid = 1;
}

// LaunchSignature is emitted by the platform when every signers are ready
message LaunchSignature {
	ErrorCode errorCode = 1;
	string signatureUuid = 2;
	repeated bytes keyHash = 3;
	repeated uint32 sequence = 4;
}
